<?xml version="1.0"?>
<package format="3">
  <name>caddy_ai2_ros2_common</name>
  <version>0.1.0</version>
  <description>Common utilities and hardware interfaces for Caddy AI2 ROS 2 stack</description>

  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
